ppt rollout hinzugefügt

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ mail_output/jschauma@verizon_net_Bestellnummer_.txt
 mail_output/ranasta@comcast_net_Bestellnummer_.txt
 mail_output/singh@hotmail_com_Bestellnummer_.txt
 mail_output/timtroyr@aol_com_Bestellnummer_.txt
+.DS_Store
